--- a/package.json
+++ b/package.json
@@ -4,17 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack -w --config webpack.server.config.js",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "deploy": "docker-compose build && docker tag -f cyclesdk_web registry.blackbeard.io/kevinsimper/cyclesdk && docker push registry.blackbeard.io/kevinsimper/cyclesdk"
+    "deploy": "docker-compose build && docker tag -f cyclesdk_web registry.blackbeard.io/kevinsimper/cyclesdk && docker push registry.blackbeard.io/kevinsimper/cyclesdk",
+    "compile-server": "NODE_ENV=production webpack --progress --config webpack.server.config.js",
+    "build": "npm run compile-server"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.3.3",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "postcss-loader": "^0.8.1",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "compression": "^1.6.1",
+    "express": "^4.13.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
