--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "chokidar": "^1.4.2",
     "css-loader": "^0.23.1",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
