--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "chokidar": "^1.4.2",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "style-loader": "^0.13.0",
