--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chokidar": "^1.4.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "style-loader": "^0.13.0",
