--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "compression": "^1.6.1",
     "express": "^4.13.4",
+    "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
