--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cycles.dk",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "watch": "webpack -w --config webpack.server.config.js",
     "test": "echo \"Error: no test specified\" && exit 0",
