--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "autoprefixer": "^6.3.3",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.0",
     "chokidar": "^1.4.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -27,9 +30,12 @@
     "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
+    "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
     "compression": "^1.6.1",
