--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "ignore-file-loader": "^1.0.0",
     "image-webpack-loader": "^1.6.3",
     "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.1",
