Add react-router config

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "lodash": "^4.5.1",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1",
+    "source-map-support": "^0.4.0"
   }
 }
