--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.13.4",
     "lodash": "^4.5.1",
     "material-ui": "^0.14.4",
+    "postcss-color-function": "^2.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
