Add packages from loading markdown files

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "ignore-file-loader": "^1.0.0",
     "image-webpack-loader": "^1.6.3",
     "isomorphic-style-loader": "0.0.10",
     "json-loader": "^0.5.4",
+    "markdown-loader": "^0.1.7",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "react-transform-hmr": "^1.0.2",
