--- a/package.json
+++ b/package.json
@@ -48,12 +48,16 @@
     "express": "^4.13.4",
     "lodash": "^4.5.1",
     "material-ui": "^0.14.4",
+    "pg": "^4.5.5",
+    "pg-hstore": "^2.3.2",
+    "pg-native": "^1.10.0",
     "postcss-color-function": "^2.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
     "redux": "^3.5.2",
+    "sequelize": "^3.23.0",
     "source-map-support": "^0.4.0"
   }
 }
