--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
+    "axios": "^0.11.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.1",
     "express": "^4.13.4",
