--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss-color-function": "^2.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
     "redux": "^3.5.2",
