--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.11.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "lodash": "^4.5.1",
     "material-ui": "^0.14.4",
