--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "axios": "^0.11.0",
     "body-parser": "^1.15.1",
+    "classnames": "^2.2.5",
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
