Post create company to the api

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "forcedomain": "^0.7.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.5.1",
     "material-ui": "^0.14.4",
     "pg": "^4.5.5",
@@ -61,6 +62,7 @@
     "react-dom": "^15.2.1",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
+    "react-refetch": "^1.0.0-beta.10",
     "react-router": "^2.0.1",
     "redux": "^3.5.2",
     "sequelize": "^3.23.0",
