--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-web:
-  build: .
-  volumes:
-   - ".:/app"
-  ports:
-   - "9000:9000"
+version: '2'
+services:
+  web:
+    build: .
+    volumes:
+      - .:/app
+    ports:
+      - "9000:9000"
+  postgres:
+    image: postgres:9.6
